--- a/InvenietisPortal/Views/Home/CKMultiPlan.en.cshtml
+++ b/InvenietisPortal/Views/Home/CKMultiPlan.en.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InvPortal.Models.SupportEmailViewModel
 @{
     Layout = "~/Views/Shared/_Layout.en.cshtml";
-    ViewBag.Title = "Invenietis - CK-MultiPlan - End-user controlled template engine";
+    ViewBag.Title = "Signature - CK-MultiPlan - End-user controlled template engine";
     ViewBag.Keywords = "CK-MultiPlan controlled template engine reports Office";
     ViewBag.Description = "CK-MultiPlan is an innovative way to produce Office reports that is both simple for the user and painless for the developer.";
 }
