--- a/InvenietisPortal/Views/Home/CKMultiPlan.fr.cshtml
+++ b/InvenietisPortal/Views/Home/CKMultiPlan.fr.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InvPortal.Models.SupportEmailViewModel
 @{
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
-    ViewBag.Title = "Invenietis - CK-MultiPlan - End-user controlled template engine";
+    ViewBag.Title = "Signature - CK-MultiPlan - End-user controlled template engine";
     ViewBag.Keywords = "CK-MultiPlan controlled template engine rapports Office";
     ViewBag.Description = "CK-MultiPlan est une manière innovante de créer des rapports Office qui est simple à l’usage pour l’utilisateur et indolore pour le développeur.";
 }
