--- a/InvenietisPortal/Views/Home/Cuke.cshtml
+++ b/InvenietisPortal/Views/Home/Cuke.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Invenietis - Cuke CMS Open source .Net";
+    ViewBag.Title = "Signature - Cuke CMS Open source .Net";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
@@ -25,7 +25,7 @@
                         
                         <p>Pour la partie gestion de contenu, Cuke sait gérer le contenu d’un site web. Il est basé sur une architecture basée sur la notion de « Page ». Il permet de créer rapidement et simplement une arborescence de pages web, facile à ordonner et à modifier.</p>
                         
-                        <p>Le contenu de chaque page est un assemblage de modules qui permet une grande flexibilité dans le contenu éditorial. Ce principe permet aussi bien d’ajouter des modules spécifiques (commandés auprès d’Invenietis pour un projet) que des modules génériques (ensemble des modules formés de CukeStd ainsi que des packages complémentaires qui ont été achetés). Chaque page peut ainsi être personnalisée, même celle contenant des modules complexes.</p>
+                        <p>Le contenu de chaque page est un assemblage de modules qui permet une grande flexibilité dans le contenu éditorial. Ce principe permet aussi bien d’ajouter des modules spécifiques (commandés auprès de Signature Code pour un projet) que des modules génériques (ensemble des modules formés de CukeStd ainsi que des packages complémentaires qui ont été achetés). Chaque page peut ainsi être personnalisée, même celle contenant des modules complexes.</p>
                     </div>
                 </div>
             </section>
