--- a/InvenietisPortal/Views/Home/References.en.cshtml
+++ b/InvenietisPortal/Views/Home/References.en.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.en.cshtml";
-    ViewBag.Title = "Invenietis - Références";
+    ViewBag.Title = "Signature - Références";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
@@ -38,7 +38,7 @@
                 <div class="span8">
                     <h2>Groupe ESIEA</h2>
 
-                    <p>Le groupe ESIEA est composé de deux écoles : ESIEA, école d'ingénieur et IN'TECH INFo, école supérieur en ingénierie informatique. Invenietis a développé le portail de candidature des écoles du groupe ainsi que l'extranet de gestion lié. Réalisé avec Knockout / Backbone / C# ASP.NET MVC / SQL Server.</p>
+                    <p>Le groupe ESIEA est composé de deux écoles : ESIEA, école d'ingénieur et IN'TECH INFo, école supérieur en ingénierie informatique. Signature Code a développé le portail de candidature des écoles du groupe ainsi que l'extranet de gestion lié. Réalisé avec Knockout / Backbone / C# ASP.NET MVC / SQL Server.</p>
 
                 </div>
                 <div class="span4 hidden-phone" style="text-align:center">
