--- a/InvenietisPortal/Views/Home/References.fr.cshtml
+++ b/InvenietisPortal/Views/Home/References.fr.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
-    ViewBag.Title = "Invenietis - Nos réalisations";
+    ViewBag.Title = "Signature - Nos réalisations";
     ViewBag.Keywords = "cas, portfolio, réalisations, applications, forfait, back-office";
-    ViewBag.Description = "Nos réalisations : Quelque exemple de solutions développée par Invenietis pour ses clients";
+    ViewBag.Description = "Nos réalisations : Quelque exemple de solutions développée par Signature Code pour ses clients";
 }
 
 @section header
@@ -28,7 +28,7 @@
                     <h2>Cofely</h2>
 
                     <p>Cofely conçoit, met en œuvre et exploite des solutions qui permettent aux entreprises et aux collectivités de mieux utiliser les énergies et de réduire leur impact environnemental.</p>
-                    <p>En partenarait avec l'agence <b>Fivetouch</b> et l'agence <b>Babel</b>, Invenietis a réalisé un système de gestion électronique de document et une gestion de contenu versionnée afin d'offrir aux commerciaux une plateforme d'aide à la vente.</p>
+                    <p>En partenarait avec l'agence <b>Fivetouch</b> et l'agence <b>Babel</b>, Signature Code a réalisé un système de gestion électronique de document et une gestion de contenu versionnée afin d'offrir aux commerciaux une plateforme d'aide à la vente.</p>
                 </div>
             </div>
         </section>
@@ -41,7 +41,7 @@
                 <div class="span8">
                     <h2>Groupe ESIEA</h2>
                     <p>Le groupe ESIEA est composé de deux écoles : ESIEA, école d'ingénieur et IN'TECH INFO, école supérieur en ingénierie informatique. </p>
-                    <p>Invenietis a développé le portail de candidature des écoles du groupe ainsi que l'extranet de gestion lié.</p>
+                    <p>Signature Code a développé le portail de candidature des écoles du groupe ainsi que l'extranet de gestion lié.</p>
                     <h4>Inscrivez-vous !</h4>
                     <ul>
                         <li><a target="_blank" href="https://candidature.esiea.fr/">Candidatures ESIEA</a></li>
@@ -66,8 +66,8 @@
                 <div class="span8">
                     <h2>Orange 4G Battle</h2>
                     <p>4G Battle est un jeu-concours en ligne organisé par <b>Orange</b> et l'agence <b>Rouge</b> à l'occasion du lancement de la 4G en France.</p>
-                    <p>Invenietis a développé le portail de participation et de gestion du concours.</p>
-                    <p><a target="_blank" href="https://4gbattle.com/">Venez tester la 4G!</a></p>
+                    <p>Signature Code a développé le portail de participation et de gestion du concours.</p>
+                    @*<p><a target="_blank" href="https://4gbattle.com/">Venez tester la 4G!</a></p>*@
                 </div>
             </div>
         </section>
@@ -82,8 +82,8 @@
                     <h2>Microsoft Campus Challenge</h2>
 
                     <p>Campus Challenge est un jeu-concours organisé par <b>Microsoft</b> et l'agence <b>Rouge</b> permettant aux étudiants adeptes des réseaux sociaux de gagner une tablette Surface après avoir eu entre leurs mains la tablette durant toute une semaine pour participer au jeu. </p>
-                    <p>Invenietis a développé le portail d'inscription et de gestion du concours ainsi qu'une web-application mobile responsive</p>
-                    <p><a target="_blank" href="http://www.microsoft.com/france/campus-program/testezwindows/">Testez Windows !</a></p>
+                    <p>Signature Code a développé le portail d'inscription et de gestion du concours ainsi qu'une web-application mobile responsive</p>
+                    @*<p><a target="_blank" href="http://www.microsoft.com/france/campus-program/testezwindows/">Testez Windows !</a></p>*@
                 </div>
                 <div class="span4 hidden-phone" style="text-align:center">
                     <img src="~/content/images/references/logo_Microsoft-Campus-Challenge.png" alt="Microsoft Campus Challenge">
@@ -105,7 +105,7 @@
                         Programme de partenariat Microsoft pour les établissements d'enseignement supérieur : offres de PC et tablettes à prix réduits sont réservés aux étudiants.
                     </p>
                     <p>
-                        Invenietis a réalisé le portail web et le back-office de gestion, en partenariat avec l'agence <b>Rouge</b>
+                        Signature Code a réalisé le portail web et le back-office de gestion, en partenariat avec l'agence <b>Rouge</b>
                     </p>
                 </div>
 
@@ -143,7 +143,7 @@
 
                     <p>Air Crew World est un réseau social qui permet aux personnes voyageant dans le monde entier d'être mis en relation (personnels navigants, hommes et femmes d'affaire). </p>
                     <p>Du conseil à la réalisation technique, nous avons entièrement développé la plateforme web du service.</p>
-                    <p><a target="_blank" href="http://www.aircrewworld.com/">Layovering differently!</a></p>
+                    @*<p><a target="_blank" href="http://www.aircrewworld.com/">Layovering differently!</a></p>*@
                 </div>
             </div>
         </section>
@@ -227,7 +227,7 @@
                     <h2>Agence Nationale pour le Service à la Personne</h2>
 
                     <p>L'Agence Nationale pour le Service à la Personne est un établissement public chargé de promouvoir le développement et la qualité du secteur des services à la personne en France. </p>
-                    <p>Invenietis a développé son portail web entre 2008 et 2013 qui comprenait une grosse gestion documentaire et de contenu ainsi qu'un portail communautaire et un forum. (l'agence a depuis été fermée).</p>
+                    <p>Signature Code a développé son portail web entre 2008 et 2013 qui comprenait une grosse gestion documentaire et de contenu ainsi qu'un portail communautaire et un forum. (l'agence a depuis été fermée).</p>
                 </div>
                 <div class="span4 hidden-phone" style="text-align:center">
                     <img src="~/content/images/references/logo_ANSP.jpg" alt="Agence Nationale pour le Service à la Personne">
