--- a/InvenietisPortal/Views/Home/_EmailNotSent.fr.cshtml
+++ b/InvenietisPortal/Views/Home/_EmailNotSent.fr.cshtml
@@ -2,5 +2,5 @@
 
 <div class="bg-danger mail-sent">
     <h3 style="color: #CC0000;">Oups !..</h3>
-    <span>Un problème est survenu, votre message n'a pas pu être envoyé.<br />Veuillez réessayer plus tard ou contacter directement <b>contact@invenietis.com</b></span><br />
+    <span>Un problème est survenu, votre message n'a pas pu être envoyé.<br />Veuillez réessayer plus tard ou contacter directement <b>contact@signature-code.com</b></span><br />
 </div>
