--- a/InvenietisPortal/Views/Home/Contact.en.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.en.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.en.cshtml";
-    ViewBag.Title = "Invenietis - Contact us";
+    ViewBag.Title = "Signature - Contact us";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
@@ -32,13 +32,13 @@
                 <div class="row-fluid">
                     <div class="span4 center">
                         <strong class="lead">Phone, mail :</strong><br /><br />
-                        <p class="center"><a href="mailto:contact@invenietis.com">contact@invenietis.com</a></p>
+                        <p class="center"><a href="mailto:contact@signature-code.com">contact@signature-code.com</a></p>
                         <p class="center">(+33) 1 84 16 19 99</p>
                     </div>
                     <div class="span4 center">
                         <strong class="lead">Technical Center :</strong><br /><br />
                         <address>
-                            <strong>Invenietis</strong><br />
+                            <strong>Signature Code</strong><br />
                             10, rue Mercoeur<br>
                             75011 - Paris<br>
                             France
@@ -47,10 +47,10 @@
                     <div class="span4 center">
                         <strong class="lead">Headquarters :</strong><br /><br />
                         <address>
-                            <strong>Invenietis</strong><br />
-                            23 rue Pelleport <br />
-                            75020 - Paris<br>
-                            France
+                            <strong>Signature SAS</strong><br />
+                            29 avenue de l'industrie<br />
+                            42390 Villars<br />
+                            FRANCE<br />
                         </address>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
         <div class="infomap">
             <address>
                 <img src="/Content/images/marcker.png" alt="logo" />
-                <strong>Invenietis - Technical Center</strong><br />
+                <strong>Signature Code</strong><br />
                 10, rue Mercoeur<br>
                 75011 - Paris<br>
                 France
@@ -73,9 +73,9 @@
         <div class="infomap">
             <address>
                 <img src="/Content/images/marcker.png" alt="logo" />
-                <strong>Invenietis - Headquarters</strong><br />
-                23 rue Pelleport<br>
-                75020 - Paris<br>
+                <strong>Signature SAS</strong><br />
+                29, avenue de l'industrie<br />
+                42390 - Villars<br />
                 France
             </address>
             <a target="_blank" href="https://maps.google.fr/maps?q=23+Rue+Pelleport,+Paris&hl=fr&ie=UTF8&sll=48.85472,2.384012&sspn=0.013766,0.033023&oq=23&t=h&gl=fr&hnear=23+Rue+Pelleport,+75020+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Maps</a>
@@ -143,7 +143,7 @@
 			48.8572848!4d2.384046*@
             var markerTech = new google.maps.Marker({
                 position: new google.maps.LatLng(48.8572848, 2.384046),
-                title: 'Invenietis - Technical Center',
+                title: 'Signature Code',
                 zoomControl: true,
                 map: map,
                 animation: google.maps.Animation.DROP,
@@ -153,7 +153,7 @@
             bounds.extend(markerTech.position);
             var markerHQ = new google.maps.Marker({
                 position: new google.maps.LatLng(48.863282, 2.404191),
-                title: 'Invenietis - Headquarters',
+                title: 'Signature SAS',
                 zoomControl: true,
                 map: map,
                 animation: google.maps.Animation.DROP,
