--- a/InvenietisPortal/Views/Home/Index.en.cshtml
+++ b/InvenietisPortal/Views/Home/Index.en.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.en.cshtml";
-    ViewBag.Title = "Invenietis - Supports and performs your IT projects";
+    ViewBag.Title = "Signature - Supports and performs your IT projects";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
@@ -28,8 +28,8 @@
                         <div class="row-fluid">
                             <div class="span12">
                                 <div class="full-logo box" >
-                                    <img alt="Invenietis" src="@Url.Content("~/content/logo.png")" />
-                                    <h1 class="htitle">Invenietis</h1>
+                                    <img alt="Signature" src="@Url.Content("~/content/logo.png")" />
+                                    <h1 class="htitle">Signature</h1>
                                     <div class="keywords">
                                         <h2 class="active">Supports and performs<br />your IT projects</h1>
                                     </div>
@@ -45,9 +45,9 @@
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
-                            <h2>The Invenietis DNA</h2>
+                            <h2>The Signature DNA</h2>
                             <div class="text">
-                                <p>Invenietis is a Paris-based firm of eight software engineering enthusiasts. We started with two people in 2004; today we are a fully-operational team ready to solve today's complex Web and office automation projects. We help our partners and customers quickly add value by focusing entirely on their core business. We build trust through individual relationships to drive long-term projects.</p>
+                                <p>Signature is a Paris-based firm of eight software engineering enthusiasts. We started with two people in 2004; today we are a fully-operational team ready to solve today's complex Web and office automation projects. We help our partners and customers quickly add value by focusing entirely on their core business. We build trust through individual relationships to drive long-term projects.</p>
                             </div>
                             <em>
                                 We see our mission as more than just turning a profit.
@@ -115,7 +115,7 @@
                             <h2>The environment</h2>
                             <div class="text">
                                 <p>
-                                    The Web is not our only sandbox. We also work in office automation environments such as the <a href="http://civikey.fr" target="_blank" title="Civikey's website">CiviKey</a> project. This free open-source project is designed to make it easier for people with physical handicaps to use electronic devices and computers. We are developing this software in partnership with the Intech’INFO school of computer science, the Alcatel-Lucent group, the Garches Foundation, the Stéria Foundation, and the Garches hospital's New Technology Platform (PFNT).
+                                    The Web is not our only sandbox. We also work in office automation environments such as the CiviKey project. This free open-source project is designed to make it easier for people with physical handicaps to use electronic devices and computers. We are developing this software in partnership with the Intech’INFO school of computer science, the Alcatel-Lucent group, the Garches Foundation, the Stéria Foundation, and the Garches hospital's New Technology Platform (PFNT).
                                 </p>
                             </div>
                             <em>
