--- a/InvenietisPortal/Views/Home/Legal.en.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.en.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.en.cshtml";
-    ViewBag.Title = "Invenietis - Legal Terms";
+    ViewBag.Title = "Signature - Legal Terms";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
@@ -30,28 +30,26 @@
                     <div class="span6 well column">
                         <h3>Publisher of this Site:</h3>
                         <address>
-                            <strong>Invenietis</strong><br />
-                            23 rue pelleport<br />
-                            75020 Paris<br />
+                            <strong>Signature SAS</strong><br />
+                            29 avenue de l'industrie<br />
+                            42390 Villars<br />
                             FRANCE<br />
-                            P : (+33) 1 84 16 19 99
+                            P : (+33) 4 77 35 55 64
                         </address>
-                        Limited liability company with a capital of 80 000 euros<br />
-                        Code APE/NAF: 6201 Z - Programmation Informatique<br />
-                        RCS Paris B 451 482 822<br />
-                        TVA n° FR36 451 482 822<br />
+                        SAS company with a capital of 90 698,60 euros<br />
+                        Code APE/NAF: 742C<br />                        
+                        N° Siret : 410 726 111 00017<br />
                     </div>
                     <div class="span6 well column">
                         <h3>Hosting service provider of this Site:</h3>
                         <address>
-                            <strong>Naitways</strong><br />
-                            NAITWAYS SAS<br />
-                            10 rue Mercoeur<br />
-                            75011 Paris<br />
+                            <strong>NAITWAYS SAS</strong><br />
+                            20 rue Rouget de Lisle<br />
+                            92130 Issy-Les-Moulineaux<br />
                             FRANCE
                         </address>
-                        Simplified joint-stock company with a capital of 50 000 euros<br />
-                        RCS Paris B 508 823 614<br />
+                        SAS au capital de 200 000 euros<br />
+                        RCS 508 823 614 Nanterre <br />
                         <a href="http://naitways.com/">http://naitways.com/</a><br />
                     </div>
                 </div>
@@ -59,11 +57,11 @@
                     <div class="span12 well">
                         <h2>Information technology, data files and civil liberties</h2>
                         Users providing this personal information by the intermediary of the Website have, in compliance with the provisions of the law, a right of access to the data concerning them, as well as the right to obtain the modification, rectification or deletion of these data. To exercise this right, they need only address a request for modifications of the information concerning them. Users have a right of opposition, of access, and of rectification of the data concerning them. Thus, Users can demand that the data concerning them be rectified, completed, clarified, updated or erased if they are inexact, incomplete, ambiguous, expired or if their collection, utilisation, communication or conservation are prohibited. Users may exercise these rights by post mail or e-mail to:<br />
-                        admin@invenietis.com<br />
+                        contact@signature-code.com<br />
                         or <br />
-                        Invenietis<br />
-                        23 rue pelleport<br />
-                        75020 Paris<br />
+                        Signature SAS<br />
+                        29 avenue de l'industrie<br />
+                        42390 Villars<br />
                         FRANCE<br />
                     </div>
                 </div>
