--- a/InvenietisPortal/Views/Home/Legal.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.fr.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
-    ViewBag.Title = "Invenietis - Mentions légales";
+    ViewBag.Title = "Signature - Mentions légales";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
@@ -30,40 +30,38 @@
                     <div class="span6 well column">
                         <h3>Editeur de ce Site&nbsp;:</h3>
                         <address>
-                            <strong>Invenietis</strong><br />
-                            23 rue pelleport<br />
-                            75020 Paris<br />
+                            <strong>Signature SAS</strong><br />
+                            29 avenue de l'industrie<br />
+                            42390 Villars<br />
                             FRANCE<br />
-                            Tel : (+33) 1 84 16 19 99
+                            P : (+33) 4 77 35 55 64
                         </address>
-                        SARL au capital de 80 000 euros<br />
-                        Code APE/NAF: 6201 Z - Programmation Informatique<br />
-                        RCS Paris B 451 482 822<br />
-                        TVA n° FR36 451 482 822<br />
+                        SAS au capital de 90 698,60 euros<br />
+                        Code APE/NAF: 742C<br />
+                        N° Siret : 410 726 111 00017<br />
                     </div>
                     <div class="span6 well column">
                         <h3>Hébergeur de ce Site&nbsp;:</h3>
                         <address>
-                            <strong>Naitways</strong><br />
-                            NAITWAYS SAS<br />
-                            10 rue Mercoeur<br />
-                            75011 Paris<br />
+                            <strong>NAITWAYS SAS</strong><br />
+                            20 rue Rouget de Lisle<br />
+                            92130 Issy-Les-Moulineaux<br />                            
                             FRANCE
                         </address>
-                        SAS au capital de 50 000 euros<br />
-                        RCS Paris B 508 823 614<br />
+                        SAS au capital de 200 000 euros<br />
+                        RCS 508 823 614 Nanterre <br />
                         <a href="http://naitways.com/">http://naitways.com/</a><br />
                     </div>
                 </div>
                 <div class="row-fluid">
                     <div class="span12 well">
                         <h2>Informatique et libertés</h2>
-                        Chaque internaute ayant fourni des informations personnelles par l'intermédiaire du Site disposent donc, conformément aux dispositions de la loi, des droits d'opposition, d'accès et de rectification de ces données. Invenietis s'engage en outre à prendre toutes précautions utiles afin de protéger les données à caractère personnel traitées par ses services, et notamment d'empêcher qu'elles ne soient déformées, endommagées ou communiquées à des tiers non autorisés. Chaque internaute peut exercer ces droits en écrivant  un courrier électronique ou postal à :<br />
-                        admin@invenietis.com<br />
-                        ou <br />
-                        Invenietis<br />
-                        23 rue pelleport<br />
-                        75020 Paris<br />
+                        Chaque internaute ayant fourni des informations personnelles par l'intermédiaire du Site disposent donc, conformément aux dispositions de la loi, des droits d'opposition, d'accès et de rectification de ces données. Signature SAS s'engage en outre à prendre toutes précautions utiles afin de protéger les données à caractère personnel traitées par ses services, et notamment d'empêcher qu'elles ne soient déformées, endommagées ou communiquées à des tiers non autorisés. Chaque internaute peut exercer ces droits en écrivant  un courrier électronique ou postal à :<br />
+                        contact@signature-code.com<br />
+                        ou <br />                        
+                        Signature SAS<br />
+                        29 avenue de l'industrie<br />
+                        42390 Villars<br />
                         FRANCE<br />
                     </div>
                 </div>
