--- a/InvenietisPortal/Views/Home/_EmailNotSent.en.cshtml
+++ b/InvenietisPortal/Views/Home/_EmailNotSent.en.cshtml
@@ -2,5 +2,5 @@
 
 <div class="bg-danger mail-sent">
     <h3 style="color: #CC0000;">Oups !..</h3>
-    <span>An error has occurred and your message has not been sent.<br />Please try again later or contact us directly at <b>contact@invenietis.com</b></span><br />
+    <span>An error has occurred and your message has not been sent.<br />Please try again later or contact us directly at <b>contact@signature-code.com</b></span><br />
 </div>
