[DONE] updated contact page

--- a/InvenietisPortal/Views/Home/Contact.en.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.en.cshtml
@@ -78,7 +78,7 @@
                 42390 - Villars<br />
                 France
             </address>
-            <a target="_blank" href="https://maps.google.fr/maps?q=23+Rue+Pelleport,+Paris&hl=fr&ie=UTF8&sll=48.85472,2.384012&sspn=0.013766,0.033023&oq=23&t=h&gl=fr&hnear=23+Rue+Pelleport,+75020+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Maps</a>
+            <a target="_blank" href="https://www.google.fr/maps/place/Signature/45.4714711,4.3559051,1155m/data=!3m1!1e3!4m13!1m7!3m6!1s0x47f5ac4d56252db3:0x492652c5833d6a24!2s29+Avenue+de+l'Industrie,+42390+Villars!3b1!8m2!3d45.4705343!4d4.3578728!3m4!1s0x47f5aeb2fb03b0bd:0x3e7c292eeffeab0e!8m2!3d45.4705328!4d4.3578713?hl=fr">Voir sur Google Map</a>
         </div>
     </div>
 
@@ -152,7 +152,7 @@
             });
             bounds.extend(markerTech.position);
             var markerHQ = new google.maps.Marker({
-                position: new google.maps.LatLng(48.863282, 2.404191),
+                position: new google.maps.LatLng(45.4717586, 4.3539772),
                 title: 'Signature SAS',
                 zoomControl: true,
                 map: map,
