--- a/InvenietisPortal/Views/Home/Contact.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.fr.cshtml
@@ -78,7 +78,7 @@
                 42390 - Villars<br />
                 France
             </address>
-            <a target="_blank" href="https://maps.google.fr/maps?q=23+Rue+Pelleport,+Paris&hl=fr&ie=UTF8&sll=48.85472,2.384012&sspn=0.013766,0.033023&oq=23&t=h&gl=fr&hnear=23+Rue+Pelleport,+75020+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Map</a>
+            <a target="_blank" href="https://www.google.fr/maps/place/29+Avenue+de+l'Industrie,+42390+Villars/@@45.4717586,4.3539772,2306m/data=!3m1!1e3!4m5!3m4!1s0x47f5ac4d56252db3:0x492652c5833d6a24!8m2!3d45.4705343!4d4.3578728?hl=fr">Voir sur Google Map</a>
         </div>
     </div>
 
@@ -151,7 +151,7 @@
             });
             bounds.extend(markerTech.position);
             var markerHQ = new google.maps.Marker({
-                position: new google.maps.LatLng(48.863282, 2.404191),
+                position: new google.maps.LatLng(45.4717586, 4.3539772),
                 title: 'Signature SAS',
                 zoomControl: true,
                 map: map,
