--- a/InvenietisPortal/Views/Home/Contact.en.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.en.cshtml
@@ -66,7 +66,7 @@
                 75011 - Paris<br>
                 France
             </address>
-            <a target="_blank" href="https://www.google.fr/maps/place/10+Rue+Mercoeur,+75011+Paris/48.8572848,2.381852,17z/data=!3m1!4b1!4m5!3m4!1s0x47e66df5d828cd6f:0xa587361c2184b991!8m2!3d48.8572848!4d2.384046">Voir sur Google Maps</a>
+            <a target="_blank" href="https://www.google.fr/maps/place/10+Rue+Mercoeur,+75011+Paris/48.8572848,2.381852,17z/data=!3m1!4b1!4m5!3m4!1s0x47e66df5d828cd6f:0xa587361c2184b991!8m2!3d48.8572848!4d2.384046">View on Google Maps</a>
         </div>
     </div>
     <div id="infomapHQ">
@@ -78,7 +78,7 @@
                 42390 - Villars<br />
                 France
             </address>
-            <a target="_blank" href="https://www.google.fr/maps/place/Signature/45.4714711,4.3559051,1155m/data=!3m1!1e3!4m13!1m7!3m6!1s0x47f5ac4d56252db3:0x492652c5833d6a24!2s29+Avenue+de+l'Industrie,+42390+Villars!3b1!8m2!3d45.4705343!4d4.3578728!3m4!1s0x47f5aeb2fb03b0bd:0x3e7c292eeffeab0e!8m2!3d45.4705328!4d4.3578713?hl=fr">Voir sur Google Map</a>
+            <a target="_blank" href="https://www.google.fr/maps/place/Signature/45.4714711,4.3559051,1155m/data=!3m1!1e3!4m13!1m7!3m6!1s0x47f5ac4d56252db3:0x492652c5833d6a24!2s29+Avenue+de+l'Industrie,+42390+Villars!3b1!8m2!3d45.4705343!4d4.3578728!3m4!1s0x47f5aeb2fb03b0bd:0x3e7c292eeffeab0e!8m2!3d45.4705328!4d4.3578713?hl=fr">View on Google Maps</a>
         </div>
     </div>
 
@@ -139,8 +139,6 @@
 
 
             var bounds = new google.maps.LatLngBounds();
-		@* https://www.google.fr/maps/place/10+Rue+Merc%C5%93ur,+75011+Paris/@48.857316,2.3838722,20.49z/data=!4m13!1m7!3m6!1s0x47e66df5d828cd6f:0xa587361c2184b991!2s10+Rue+Merc%C5%93ur,+75011+Paris!3b1!8m2!3d48.8572848!4d2.384046!3m4!1s0x47e66df5d828cd6f:0xa587361c2184b991!8m2!3d48.8572848!4d2.384046!6m1!1e1?hl=fr
-			48.8572848!4d2.384046*@
             var markerTech = new google.maps.Marker({
                 position: new google.maps.LatLng(48.8572848, 2.384046),
                 title: 'Signature Code',
