Fix typos and GMaps URL

--- a/InvenietisPortal/Views/Home/Index.en.cshtml
+++ b/InvenietisPortal/Views/Home/Index.en.cshtml
@@ -28,8 +28,8 @@
                         <div class="row-fluid">
                             <div class="span12">
                                 <div class="full-logo box" >
-                                    <img alt="Signature" src="@Url.Content("~/content/logo.png")" />
-                                    <h1 class="htitle">Signature</h1>
+                                    <img alt="Signature Code" src="@Url.Content("~/content/logo.png")" />
+                                    <h1 class="htitle">Signature Code</h1>
                                     <div class="keywords">
                                         <h2 class="active">Supports and performs<br />your IT projects</h1>
                                     </div>
@@ -45,9 +45,9 @@
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
-                            <h2>The Signature DNA</h2>
+                            <h2>The Signature Code DNA</h2>
                             <div class="text">
-                                <p>Signature is a Paris-based firm of eight software engineering enthusiasts. We started with two people in 2004; today we are a fully-operational team ready to solve today's complex Web and office automation projects. We help our partners and customers quickly add value by focusing entirely on their core business. We build trust through individual relationships to drive long-term projects.</p>
+                                <p>Signature Code is a Paris-based firm of eight software engineering enthusiasts. We started with two people in 2004; today we are a fully-operational team ready to solve today's complex Web and office automation projects. We help our partners and customers quickly add value by focusing entirely on their core business. We build trust through individual relationships to drive long-term projects.</p>
                             </div>
                             <em>
                                 We see our mission as more than just turning a profit.
@@ -115,7 +115,9 @@
                             <h2>The environment</h2>
                             <div class="text">
                                 <p>
-                                    The Web is not our only sandbox. We also work in office automation environments such as the CiviKey project. This free open-source project is designed to make it easier for people with physical handicaps to use electronic devices and computers. We are developing this software in partnership with the Intech’INFO school of computer science, the Alcatel-Lucent group, the Garches Foundation, the Stéria Foundation, and the Garches hospital's New Technology Platform (PFNT).
+                                    The Web is not our only sandbox. We also work in office automation environments such as the CiviKey project.
+                                    This free open-source project is designed to make it easier for people with physical handicaps to use electronic devices and computers.
+                                    We are developing this software in partnership with IN'TECH, school of computer science, the Alcatel-Lucent group, the Garches Foundation, the Stéria Foundation, and the Garches hospital's New Technology Platform (PFNT).
                                 </p>
                             </div>
                             <em>
