--- a/InvenietisPortal/Views/Home/_Form.en.cshtml
+++ b/InvenietisPortal/Views/Home/_Form.en.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InvPortal.Models.SupportEmailViewModel
 
 <div class="control-group">
-    <label class="control-label" for="email">Mail address : </label>
+    <label class="control-label" for="email">E-mail address : </label>
     <div class="controls">
         @Html.TextBoxFor( m => m.Email, new { placeholder = "Mail address", @class = "input-xxlarge" } )
         @Html.ValidationMessageFor( m => m.Email )
