Add replacement tokens for e-mail

--- a/InvenietisPortal/Views/Home/Contact.en.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.en.cshtml
@@ -32,7 +32,7 @@
                 <div class="row-fluid">
                     <div class="span4 center">
                         <strong class="lead">Phone, mail :</strong><br /><br />
-                        <p class="center"><a href="mailto:contact@signature-code.com">contact@signature-code.com</a></p>
+                        <p class="center"><a href="" class="contact-email-s">...</a></p>
                         <p class="center">(+33) 1 84 16 19 99</p>
                     </div>
                     <div class="span4 center">
