--- a/InvenietisPortal/Views/Home/Index.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Index.fr.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
-    ViewBag.Title = "Signature - Accompagne et réalise vos projets IT";
+    ViewBag.Title = "Signature Code - Accompagne et réalise vos projets IT";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
@@ -28,8 +28,8 @@
                         <div class="row-fluid">
                             <div class="span12">
                                 <div class="full-logo box" >
-                                    <img alt="Signature" src="@Url.Content("~/content/logo.png")" />
-                                    <h1 class="htitle">Signature</h1>
+                                    <img alt="Signature Code" src="@Url.Content("~/content/logo.png")" />
+                                    <h1 class="htitle">Signature Code</h1>
                                     <div class="keywords">
                                         <h2 class="active">Accompagne et réalise<br />vos projets IT</h2>
                                     </div>
@@ -47,7 +47,14 @@
                         <div class="span8">
                             <h2>ADN</h2>
                             <div class="text">
-                                <p>Signature est une entreprise basée à Paris, animée par 8 passionnés, spécialistes en Ingénierie Logicielle. L’aventure a commencé en 2004 avec 2 personnes pour arriver aujourd’hui à une équipe opérationnelle, cohérente et disponible pour résoudre les problématiques complexes des projets web et bureautiques actuels. Notre entreprise est avant tout un moyen d’aider nos partenaires et clients à créer rapidement de la valeur en leur permettant de se consacrer pleinement à leur cœur de métier. Nous cherchons à établir des relations de confiance, d’humain à humain, pour accompagner les projets sur le long terme.</p>
+                                <p>
+                                Signature Code est une équipe parisienne de spécialistes en Ingénierie Logicielle.
+                                L’aventure a commencé en 2004 avec 2 personnes pour arriver aujourd’hui à une équipe opérationnelle,
+                                cohérente et disponible pour résoudre les problématiques complexes des projets web et bureautiques actuels.
+                                Notre entreprise est avant tout un moyen d’aider nos partenaires et clients à créer rapidement de la valeur
+                                en leur permettant de se consacrer pleinement à leur cœur de métier. Nous cherchons à établir des relations de confiance
+                                d’humain à humain, pour accompagner les projets sur le long terme.
+                                </p>
                             </div>
                             <em>
                                 Nous voyons notre mission comme quelque chose qui va bien <span style="white-space: nowrap">au-delà</span> des simples questions
