--- a/InvenietisPortal/Views/Home/Legal.en.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.en.cshtml
@@ -7,64 +7,64 @@
 @section header
 {
     <style type="text/css">
-        section.container h2
-        {
+        section.container h2 {
             text-align: left;
         }
+
         .column {
             min-height: 300px !important;
         }
     </style>
 }
 
-    <div class="row-fluid top-bx">
-        <div class="span12 ">
-            <section class="container">
-                <div class="row-fluid">
-                    <div class="span12">
-                        <h1>Legal Terms</h1>
-                        <h2>General informations</h2>
-                    </div>
+<div class="row-fluid top-bx">
+    <div class="span12 ">
+        <section class="container">
+            <div class="row-fluid">
+                <div class="span12">
+                    <h1>Legal Terms</h1>
+                    <h2>General informations</h2>
                 </div>
-                <div class="row-fluid">
-                    <div class="span6 well column">
-                        <h3>Publisher of this Site:</h3>
-                        <address>
-                            <strong>Signature SAS</strong><br />
-                            29 avenue de l'industrie<br />
-                            42390 Villars<br />
-                            FRANCE<br />
-                            P : (+33) 4 77 35 55 64
-                        </address>
-                        SAS company with a capital of 90 698,60 euros<br />
-                        Code APE/NAF: 742C<br />                        
-                        N° Siret : 410 726 111 00017<br />
-                    </div>
-                    <div class="span6 well column">
-                        <h3>Hosting service provider of this Site:</h3>
-                        <address>
-                            <strong>NAITWAYS SAS</strong><br />
-                            20 rue Rouget de Lisle<br />
-                            92130 Issy-Les-Moulineaux<br />
-                            FRANCE
-                        </address>
-                        SAS au capital de 200 000 euros<br />
-                        RCS 508 823 614 Nanterre <br />
-                        <a href="http://naitways.com/">http://naitways.com/</a><br />
-                    </div>
-                </div>
-                <div class="row-fluid">
-                    <div class="span12 well">
-                        <h2>Information technology, data files and civil liberties</h2>
-                        Users providing this personal information by the intermediary of the Website have, in compliance with the provisions of the law, a right of access to the data concerning them, as well as the right to obtain the modification, rectification or deletion of these data. To exercise this right, they need only address a request for modifications of the information concerning them. Users have a right of opposition, of access, and of rectification of the data concerning them. Thus, Users can demand that the data concerning them be rectified, completed, clarified, updated or erased if they are inexact, incomplete, ambiguous, expired or if their collection, utilisation, communication or conservation are prohibited. Users may exercise these rights by post mail or e-mail to:<br />
-                        contact@signature-code.com<br />
-                        or <br />
-                        Signature SAS<br />
+            </div>
+            <div class="row-fluid">
+                <div class="span6 well column">
+                    <h3>Publisher of this Site:</h3>
+                    <address>
+                        <strong>Signature SAS</strong><br />
                         29 avenue de l'industrie<br />
                         42390 Villars<br />
                         FRANCE<br />
-                    </div>
+                        P : (+33) 4 77 35 55 64
+                    </address>
+                    SAS company with a capital of 90 698,60 euros<br />
+                    Code APE/NAF: 742C<br />
+                    N° Siret : 410 726 111 00017<br />
                 </div>
-            </section>
-        </div>
+                <div class="span6 well column">
+                    <h3>Hosting service provider of this Site:</h3>
+                    <address>
+                        <strong>NAITWAYS SAS</strong><br />
+                        20 rue Rouget de Lisle<br />
+                        92130 Issy-Les-Moulineaux<br />
+                        FRANCE
+                    </address>
+                    SAS au capital de 200 000 euros<br />
+                    RCS 508 823 614 Nanterre <br />
+                    <a href="http://naitways.com/">http://naitways.com/</a><br />
+                </div>
+            </div>
+            <div class="row-fluid">
+                <div class="span12 well">
+                    <h2>Information technology, data files and civil liberties</h2>
+                    Users providing this personal information by the intermediary of the Website have, in compliance with the provisions of the law, a right of access to the data concerning them, as well as the right to obtain the modification, rectification or deletion of these data. To exercise this right, they need only address a request for modifications of the information concerning them. Users have a right of opposition, of access, and of rectification of the data concerning them. Thus, Users can demand that the data concerning them be rectified, completed, clarified, updated or erased if they are inexact, incomplete, ambiguous, expired or if their collection, utilisation, communication or conservation are prohibited. Users may exercise these rights by post mail or e-mail to:<br />
+                    <a href="" class="contact-email-s">...</a><br />
+                    or <br />
+                    Signature SAS<br />
+                    29 avenue de l'industrie<br />
+                    42390 Villars<br />
+                    FRANCE<br />
+                </div>
+            </div>
+        </section>
     </div>
+</div>
