--- a/InvenietisPortal/Views/Home/Legal.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.fr.cshtml
@@ -7,64 +7,64 @@
 @section header
 {
     <style type="text/css">
-        section.container h2
-        {
+        section.container h2 {
             text-align: left;
         }
+
         .column {
             min-height: 300px !important;
         }
     </style>
 }
 
-    <div class="row-fluid top-bx">
-        <div class="span12 ">
-            <section class="container">
-                <div class="row-fluid">
-                    <div class="span12">
-                        <h1>Mentions légales</h1>
-                        <h2>Informations légales</h2>
-                    </div>
+<div class="row-fluid top-bx">
+    <div class="span12 ">
+        <section class="container">
+            <div class="row-fluid">
+                <div class="span12">
+                    <h1>Mentions légales</h1>
+                    <h2>Informations légales</h2>
                 </div>
-                <div class="row-fluid">
-                    <div class="span6 well column">
-                        <h3>Editeur de ce Site&nbsp;:</h3>
-                        <address>
-                            <strong>Signature SAS</strong><br />
-                            29 avenue de l'industrie<br />
-                            42390 Villars<br />
-                            FRANCE<br />
-                            P : (+33) 4 77 35 55 64
-                        </address>
-                        SAS au capital de 90 698,60 euros<br />
-                        Code APE/NAF: 742C<br />
-                        N° Siret : 410 726 111 00017<br />
-                    </div>
-                    <div class="span6 well column">
-                        <h3>Hébergeur de ce Site&nbsp;:</h3>
-                        <address>
-                            <strong>NAITWAYS SAS</strong><br />
-                            20 rue Rouget de Lisle<br />
-                            92130 Issy-Les-Moulineaux<br />                            
-                            FRANCE
-                        </address>
-                        SAS au capital de 200 000 euros<br />
-                        RCS 508 823 614 Nanterre <br />
-                        <a href="http://naitways.com/">http://naitways.com/</a><br />
-                    </div>
-                </div>
-                <div class="row-fluid">
-                    <div class="span12 well">
-                        <h2>Informatique et libertés</h2>
-                        Chaque internaute ayant fourni des informations personnelles par l'intermédiaire du Site disposent donc, conformément aux dispositions de la loi, des droits d'opposition, d'accès et de rectification de ces données. Signature SAS s'engage en outre à prendre toutes précautions utiles afin de protéger les données à caractère personnel traitées par ses services, et notamment d'empêcher qu'elles ne soient déformées, endommagées ou communiquées à des tiers non autorisés. Chaque internaute peut exercer ces droits en écrivant  un courrier électronique ou postal à :<br />
-                        contact@signature-code.com<br />
-                        ou <br />                        
-                        Signature SAS<br />
+            </div>
+            <div class="row-fluid">
+                <div class="span6 well column">
+                    <h3>Editeur de ce Site&nbsp;:</h3>
+                    <address>
+                        <strong>Signature SAS</strong><br />
                         29 avenue de l'industrie<br />
                         42390 Villars<br />
                         FRANCE<br />
-                    </div>
+                        P : (+33) 4 77 35 55 64
+                    </address>
+                    SAS au capital de 90 698,60 euros<br />
+                    Code APE/NAF: 742C<br />
+                    N° Siret : 410 726 111 00017<br />
                 </div>
-            </section>
-        </div>
+                <div class="span6 well column">
+                    <h3>Hébergeur de ce Site&nbsp;:</h3>
+                    <address>
+                        <strong>NAITWAYS SAS</strong><br />
+                        20 rue Rouget de Lisle<br />
+                        92130 Issy-Les-Moulineaux<br />
+                        FRANCE
+                    </address>
+                    SAS au capital de 200 000 euros<br />
+                    RCS 508 823 614 Nanterre <br />
+                    <a href="http://naitways.com/">http://naitways.com/</a><br />
+                </div>
+            </div>
+            <div class="row-fluid">
+                <div class="span12 well">
+                    <h2>Informatique et libertés</h2>
+                    Chaque internaute ayant fourni des informations personnelles par l'intermédiaire du Site disposent donc, conformément aux dispositions de la loi, des droits d'opposition, d'accès et de rectification de ces données. Signature SAS s'engage en outre à prendre toutes précautions utiles afin de protéger les données à caractère personnel traitées par ses services, et notamment d'empêcher qu'elles ne soient déformées, endommagées ou communiquées à des tiers non autorisés. Chaque internaute peut exercer ces droits en écrivant  un courrier électronique ou postal à :<br />
+                    <a href="" class="contact-email-s">...</a><br />
+                    ou <br />
+                    Signature SAS<br />
+                    29 avenue de l'industrie<br />
+                    42390 Villars<br />
+                    FRANCE<br />
+                </div>
+            </div>
+        </section>
     </div>
+</div>
