--- a/InvenietisPortal/Views/Shared/_Layout.fr.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.fr.cshtml
@@ -85,11 +85,11 @@
                                 <strong>Signature Code</strong>
                                 <a class="minimap" href="@Url.Action( "Contact" )"></a>
 
-                                10, rue Mercoeur<br>
-                                75011 - Paris<br>
+                                10 rue Mercoeur<br>
+                                75011 Paris<br>
                                 France<br /><br />
-                                Email: <a href="mailto:contact@signature-code.com">contact@signature-code.com</a><br />
-                                <abbr title="Téléphone">Tel:</abbr> (+33) 1 84 16 19 99
+                                E-mail : <a href="" class="contact-email-s">...</a><br />
+                                <abbr title="Téléphone">Tél. :</abbr> (+33) 01 84 16 19 99
                             </address>
                         </div>
                     </div>
@@ -97,9 +97,11 @@
                 <div class="row-fluid">
                     <div class="span12 center">
                         <div class="legal">
-                            <img src="@Url.Content("~/Content/images/logo.png")" alt="Logo Signature" />
+                            <p>
+                                <img src="@Url.Content("~/Content/images/logo.png")" alt="Logo Signature" />
+                            </p>
                             <span>
-                                Copyright &copy; @DateTime.Now.Year Signature SAS. Tous Droits Réservés.
+                                Copyright &copy; @DateTime.Now.Year Signature SAS. Tous droits réservés.
                                 <a href="@Url.Action( "Legal" )"> Mentions légales</a>
                             </span>
                         </div>
@@ -110,14 +112,20 @@
     </div>
     @RenderSection( "js", required: false )
     <script type="text/javascript">
+        !function(){function e(e){this.message=e}var t="undefined"!=typeof exports?exports:"undefined"!=typeof self?self:$.global,r="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";e.prototype=new Error,e.prototype.name="InvalidCharacterError",t.btoa||(t.btoa=function(t){for(var o,n,a=String(t),i=0,f=r,c="";a.charAt(0|i)||(f="=",i%1);c+=f.charAt(63&o>>8-i%1*8)){if(n=a.charCodeAt(i+=.75),n>255)throw new e("'btoa' failed: The string to be encoded contains characters outside of the Latin1 range.");o=o<<8|n}return c}),t.atob||(t.atob=function(t){var o=String(t).replace(/[=]+$/,"");if(o.length%4==1)throw new e("'atob' failed: The string to be decoded is not correctly encoded.");for(var n,a,i=0,f=0,c="";a=o.charAt(f++);~a&&(n=i%4?64*n+a:a,i++%4)?c+=String.fromCharCode(255&n>>(-2*i&6)):0)a=r.indexOf(a);return c})}();
+    </script>
+    <script type="text/javascript">
         $(function () {
+            var c = 'Y29udGFjdEBz#WduYXR1cmUtY29k^S5jb20=';
+            c = atob(c.replace('#', 'a').replace('^', 'Z'));
+
+            $('a.contact-email-s').attr("href", "mailto:" + c);
+            $('.contact-email-s').text(c);
+
             $('.expand-menu').click(function () {
                 $('.header-links').toggleClass('visible');
             });
         });
-    </script>
-    <script type="text/javascript">
-        _gaq.push(['_trackPageview']);
     </script>
 </body>
 </html>
